--- a/deploy/go-carbon.conf
+++ b/deploy/go-carbon.conf
@@ -275,10 +275,10 @@ max-globs = 100
 fail-on-max-globs = false
 
 # Maximum metrics could be returned by glob/wildcard in find request (currently
-# works only for trie index)
+# works only for trie index) (Default: 10,000,000)
 max-metrics-globbed  = 30000
 # Maximum metrics could be returned in render request (works both all types of
-# indexes)
+# indexes) (Default: 1,000,000)
 max-metrics-rendered = 1000
 
 
